--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
     <header>
       <h1>Event Planner</h1>
     </header>
+    <div class="filter-section">
+      <label for="categoryFilter">Filter by Category:</label>
+      <select id="categoryFilter">
+        <option value="all">All</option>
+        <option value="Tech">Tech</option>
+        <option value="Sports">Sports</option>
+        <option value="Music">Music</option>
+        <option value="Art">Art</option>
+      </select>
+    </div>
+
+    <section id="event-list">
+      <!-- Events-->
+    </section>
 
     <script src="script.js"></script>
   </body>
