--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <form id="registerForm">
           <input type="hidden" id="event" />
           <label for="name">Name:</label>
-          <input type="text" id="name" required />
+          <input type="text" id="name" autocomplete="off" />
           <label for="email">Email:</label>
           <input type="email" id="email" required />
           <button type="submit">Register</button>
