--- a/index.html
+++ b/index.html
@@ -31,9 +31,21 @@
         <form id="registerForm">
           <input type="hidden" id="event" />
           <label for="name">Name:</label>
-          <input type="text" id="name" autocomplete="off" />
+          <input
+            type="text"
+            id="name"
+            autocomplete="off"
+            placeholder="Enter your name"
+            required
+          />
           <label for="email">Email:</label>
-          <input type="email" id="email" required />
+          <input
+            type="email"
+            id="email"
+            placeholder="Enter your Email"
+            autocomplete="off"
+            required
+          />
           <button type="submit">Register</button>
         </form>
       </div>
