--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <header>
-      <h1>Event Planner</h1>
+      <h1>YOUR HOME OF EVENTS</h1>
+      <h3>MINISTER OF ENJOYMENT --- MR CONTINENTAL !!</h3>
     </header>
     <div class="filter-section">
       <label for="categoryFilter">Filter by Category:</label>
