--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <h1>YOUR HOME OF EVENTS</h1>
-      <h3>MINISTER OF ENJOYMENT --- MR CONTINENTAL !!</h3>
+      <h3>MR CONTINENTAL</h3>
     </header>
     <div class="filter-section">
       <label for="categoryFilter">Filter by Category:</label>
